--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Product</a>
+                <a class="nav-link" href="#smart">Smartphone</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Smartphone</a>
+                <a class="nav-link " href="#lap">Laptop</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link " href="#">Laptop</a>
-                </li>
+                  <a class="nav-link" href="#cat">Product</a>
+                  </li>
         </ul>
       </div>
     </div>
@@ -114,7 +114,7 @@
       </div>
 </div>
 <!-- Smartphone Card -->
-<div class="container carde">
+<div id="smart" class="container carde">
   <div class="flexe d-flex justify-content-between">
     <h3 style="margin-bottom: 30px;">Smartphone</h3>
     <a style="margin-top: 16px; padding-right: 15px;" class="text-warning" href=""><strong> See All</strong></a>
@@ -161,7 +161,7 @@
 </div>
 </div>
 <!-- Laptop Card  -->
-<div class="container carde">
+<div id="lap" class="container carde">
   <div class="container carde">
     <div class="flexe d-flex justify-content-between">
       <h3 style="margin-bottom: 30px;">Laptop</h3>
